compiler/typ/tests/fixtures/diagnostics/0663_fcm_unpack_with_type_mismatch_01.ml.infer.expected
File "0663_fcm_unpack_with_type_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0663_fcm_unpack_with_type_mismatch_01 is not a valid module name.

File "0663_fcm_unpack_with_type_mismatch_01.ml", line 13, characters 28-40:
13 |   let module N_alpha = (val packed_alpha : Box_alpha with type t = bool) in
                                 ^^^^^^^^^^^^
Error: The value packed_alpha has type (module Box_alpha)
       but an expression was expected of type
         (module Box_alpha with type t = bool)
